add user crud and .rest
