# routes/user.js
@@ -1,9 +1,0 @@
-const express = require('express');
-const router = express.Router();
-
-const usersController = require('../controllers/user');
-
-router.get('/', usersController.getAll);
-router.get('/:id', usersController.getSingle);
-
-module.exports = router;
